fixed style issue